--- a/PoissonEkstraklasa.ipynb
+++ b/PoissonEkstraklasa.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e8554dd3fca04baf99cbfe5a186ad497",
+       "model_id": "65a3caa598a247898abf08aaba606c1e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a249cdc2aebf431eb1129d9afc17527b",
+       "model_id": "f9a9f1ec73af4b21a421c8f802a9de52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92ce7a511c9f4145b21ec31cd84e8081",
+       "model_id": "e0cb683802a541a1adf064b074ecf935",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +126,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88deca2ee1ca45edb0798f13fdbcd86f",
+       "model_id": "71a538e9f29f41509fc8f1e1b781f42c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,7 +159,7 @@
     "strzelone_dom = {\n",
     "    1: 13,    2: 8,    3: 13,    4: 9,    5: 12,    6: 14,    7: 8,    8: 10,    9: 11,    10: 15,\n",
     "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 12,    17: 7,    18: 12,    19: 8,    20: 9,\n",
-    "    21: 12,    22: 10,    23: 12,    24: 10,    25: 8,    26: 16,    27: 8,    28: 0,    29: 0,    30: 0\n",
+    "    21: 12,    22: 10,    23: 12,    24: 10,    25: 8,    26: 16,    27: 8,    28: 6,    29: 0,    30: 0\n",
     "}"
    ]
   },
@@ -172,7 +172,7 @@
     "strzelone_wyjazd = {\n",
     "    1: 9,    2: 15,    3: 10,    4: 14,    5: 13,    6: 11,    7: 14,    8: 6,    9: 8,    10: 10,\n",
     "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 4,    17: 5,    18: 7,    19: 14,    20: 5,\n",
-    "    21: 7,    22: 8,    23: 8,    24: 5,    25: 11,    26: 10,    27: 5,    28: 0,    29: 0,    30: 0\n",
+    "    21: 7,    22: 8,    23: 9,    24: 5,    25: 11,    26: 10,    27: 5,    28: 6,    29: 0,    30: 0\n",
     "}"
    ]
   },
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 26*8 + 7\n",
+    "mecze_liga = 28*8\n",
     "avg_strzelone_dom_liga = sum(list(strzelone_dom.values()))/mecze_liga\n",
     "avg_strzelone_wyjazd_liga = sum(list(strzelone_wyjazd.values()))/mecze_liga"
    ]
@@ -275,62 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((2, 1), 827),\n",
-       " ((1, 1), 743),\n",
-       " ((2, 2), 686),\n",
-       " ((1, 2), 649),\n",
-       " ((3, 1), 605),\n",
-       " ((3, 2), 555),\n",
-       " ((2, 3), 447),\n",
-       " ((2, 0), 445),\n",
-       " ((1, 0), 428),\n",
-       " ((1, 3), 374),\n",
-       " ((4, 1), 353),\n",
-       " ((3, 0), 309),\n",
-       " ((3, 3), 295),\n",
-       " ((0, 1), 288),\n",
-       " ((4, 2), 277),\n",
-       " ((0, 2), 263),\n",
-       " ((2, 4), 198),\n",
-       " ((4, 0), 196),\n",
-       " ((0, 0), 184),\n",
-       " ((4, 3), 176),\n",
-       " ((1, 4), 166),\n",
-       " ((3, 4), 162),\n",
-       " ((0, 3), 156),\n",
-       " ((5, 2), 153),\n",
-       " ((5, 1), 134),\n",
-       " ((5, 0), 91),\n",
-       " ((0, 4), 82),\n",
-       " ((5, 3), 76),\n",
-       " ((4, 4), 74),\n",
-       " ((1, 5), 63),\n",
-       " ((2, 5), 55),\n",
-       " ((3, 5), 51),\n",
-       " ((6, 1), 50),\n",
-       " ((6, 2), 49),\n",
-       " ((5, 4), 43)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Podbeskidzie\"]*avg_strzelone_dom_liga\n",
-    "away = home_defence_strength[\"Wisła\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
-    "results = []\n",
-    "rng = np.random.default_rng()\n",
-    "for i in range(0,int(n.value)):\n",
-    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "Counter(results).most_common(35)"
+    "#home = home_attack_strength[\"Legia\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Legia\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
+    "#results = []\n",
+    "#rng = np.random.default_rng()\n",
+    "#for i in range(0,int(n.value)):\n",
+    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "#Counter(results).most_common(35)"
    ]
   },
   {
