--- a/TimeWeightedEkstraklasa.ipynb
+++ b/TimeWeightedEkstraklasa.ipynb
@@ -70,7 +70,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c7bf4a195afb45a9a4e62ad252930eec",
+       "model_id": "12708a61361f4858b8754bfe806def1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -84,7 +84,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a83a7075d7fd4a11b686003a3312fa03",
+       "model_id": "daf4085734ef4d9e9a39cb9ea237a7e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +98,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec8ec3aac9ba4aac841b6db727689287",
+       "model_id": "ba92e808c02d4d0e9b9ae8b783dfde00",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +112,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4413a046764e40969b98783c98265d8f",
+       "model_id": "093f18cdd2594d5d8dcc7aabe7a4efaf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -145,7 +145,7 @@
     "strzelone_dom = {\n",
     "    1: 13,    2: 8,    3: 13,    4: 9,    5: 12,    6: 14,    7: 8,    8: 10,    9: 11,    10: 15,\n",
     "    11: 9,    12: 15,    13: 8,    14: 10,    15: 6,    16: 12,    17: 7,    18: 12,    19: 8,    20: 9,\n",
-    "    21: 12,    22: 10,    23: 12,    24: 10,    25: 8,    26: 16,    27: 8,    28: 0,    29: 0,    30: 0\n",
+    "    21: 12,    22: 10,    23: 12,    24: 10,    25: 8,    26: 16,    27: 8,    28: 6,    29: 0,    30: 0\n",
     "}"
    ]
   },
@@ -158,7 +158,7 @@
     "strzelone_wyjazd = {\n",
     "    1: 9,    2: 15,    3: 10,    4: 14,    5: 13,    6: 11,    7: 14,    8: 6,    9: 8,    10: 10,\n",
     "    11: 10,    12: 6,    13: 16,    14: 9,    15: 10,    16: 4,    17: 5,    18: 7,    19: 14,    20: 5,\n",
-    "    21: 7,    22: 8,    23: 8,    24: 5,    25: 11,    26: 10,    27: 5,    28: 0,    29: 0,    30: 0\n",
+    "    21: 7,    22: 8,    23: 9,    24: 5,    25: 11,    26: 10,    27: 5,    28: 6,    29: 0,    30: 0\n",
     "}"
    ]
   },
@@ -168,7 +168,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mecze_liga = 26*8 + 7"
+    "mecze_liga = 28*8"
    ]
   },
   {
@@ -280,62 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[((0, 2), 1134),\n",
-       " ((0, 3), 945),\n",
-       " ((1, 2), 891),\n",
-       " ((0, 1), 888),\n",
-       " ((1, 3), 842),\n",
-       " ((1, 1), 700),\n",
-       " ((0, 4), 644),\n",
-       " ((1, 4), 508),\n",
-       " ((2, 2), 349),\n",
-       " ((0, 5), 343),\n",
-       " ((0, 0), 341),\n",
-       " ((2, 3), 302),\n",
-       " ((1, 0), 262),\n",
-       " ((2, 1), 257),\n",
-       " ((1, 5), 252),\n",
-       " ((2, 4), 224),\n",
-       " ((0, 6), 132),\n",
-       " ((1, 6), 127),\n",
-       " ((2, 5), 118),\n",
-       " ((2, 0), 105),\n",
-       " ((3, 2), 89),\n",
-       " ((3, 3), 87),\n",
-       " ((0, 7), 63),\n",
-       " ((3, 1), 61),\n",
-       " ((1, 7), 47),\n",
-       " ((3, 4), 34),\n",
-       " ((2, 6), 34),\n",
-       " ((3, 0), 31),\n",
-       " ((3, 5), 29),\n",
-       " ((4, 3), 23),\n",
-       " ((4, 2), 18),\n",
-       " ((4, 1), 18),\n",
-       " ((3, 6), 15),\n",
-       " ((1, 8), 11),\n",
-       " ((0, 8), 9)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
-    "away = home_defence_strength[\"Podbeskidzie\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
-    "results = []\n",
-    "rng = np.random.default_rng()\n",
-    "for i in range(0,int(n.value)):\n",
-    "    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "Counter(results).most_common(35)"
+    "#home = home_attack_strength[\"Podbeskidzie\"]*away_defence_strength[\"Wisła\"]*avg_strzelone_dom_liga\n",
+    "#away = home_defence_strength[\"Podbeskidzie\"]*away_attack_strength[\"Wisła\"]*avg_strzelone_wyjazd_liga\n",
+    "#results = []\n",
+    "#rng = np.random.default_rng()\n",
+    "#for i in range(0,int(n.value)):\n",
+    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
+    "#Counter(results).most_common(35)"
    ]
   },
   {
