--- a/Polish_League_Poisson_Model.ipynb
+++ b/Polish_League_Poisson_Model.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -27,19 +27,20 @@
        "} \n",
        "$( document ).ready(code_toggle);\n",
        "</script>\n",
-       "<a href=\"javascript:code_toggle()\">Wyświetl kod</a>"
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Wyświetl/schowaj kod.\"></form>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
+    "\n",
     "HTML('''<script>\n",
     "code_show=true; \n",
     "function code_toggle() {\n",
@@ -52,7 +53,7 @@
     "} \n",
     "$( document ).ready(code_toggle);\n",
     "</script>\n",
-    "<a href=\"javascript:code_toggle()\">Wyświetl kod</a>''')"
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" value=\"Wyświetl/schowaj kod.\"></form>''')"
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a512f3613354eabba7eaa77d44d0834",
+       "model_id": "8443dddd19c448b48a402b5f48e0068c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -98,7 +99,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02d4d268c0a2401ca745cbfa1adec7da",
+       "model_id": "631be03976d649358d1e3e962b119e75",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Dropdown(description='Liga:', options=('ekstraklasa', '1liga'), value='ekstraklasa')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdaf19ef1f6347abbd985ff133878143",
        "version_major": 2,
        "version_minor": 0
       },
@@ -112,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2dc67fe924d542bc85c0afe2036ddd6c",
+       "model_id": "3ef4f4cd63224ec2b8b7049d198a0262",
        "version_major": 2,
        "version_minor": 0
       },
@@ -126,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a58343f008e448efb87efe5786302a53",
+       "model_id": "0bbf48b7521442679b58e3da72538dd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,10 +155,12 @@
    ],
    "source": [
     "n = widgets.FloatLogSlider(value=10000, base=10, min=1, max=10, step=1, description='Liczba symulacji', style=style)\n",
-    "kolejka = widgets.BoundedIntText(value=1, min=1, max=34, step=1, description='Wybierz kolejkę:', disabled=False, style=style)\n",
+    "matchday = widgets.BoundedIntText(value=1, min=1, max=34, step=1, description='Wybierz kolejkę:', disabled=False, style=style)\n",
+    "league = widgets.Dropdown(options=['ekstraklasa', '1liga'], value='ekstraklasa', description='Liga:', disabled=False)\n",
     "\n",
     "display(n)\n",
-    "display(kolejka)\n",
+    "display(league)\n",
+    "display(matchday)\n",
     "\n",
     "button = widgets.Button(description='Zatwierdź',disabled=False,tooltip='Confirm',icon='check') \n",
     "output = widgets.Output()\n",
@@ -152,87 +169,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "strzelone_dom = {\n",
-    "    1: 13,    2: 15,    3: 8,    4: 15,    5: 15,    6: 10,    7: 12,    8: 17,    9: 12,    10: 23,\n",
-    "    11: 10,    12: 20,    13: 10,    14: 9,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
-    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
-    "    31: 0,     32: 0,    33: 0,     34 : 0\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "strzelone_wyjazd = {\n",
-    "    1: 8,    2: 12,    3: 7,    4: 14,    5: 6,    6: 11,    7: 11,    8: 7,    9: 16,    10: 9,\n",
-    "    11: 10,    12: 13,    13: 12,    14: 9,    15: 0,    16: 0,    17: 0,    18: 0,    19: 0,    20: 0,\n",
-    "    21: 0,    22: 0,    23: 0,    24: 0,    25: 0,    26: 0,    27: 0,    28: 0,    29: 0,    30: 0,    \n",
-    "    31: 0,     32: 0,    33: 0,     34 : 0\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mecze_liga = 30*8 + 12*9 + 8 + 7\n",
-    "avg_strzelone_dom_liga = (313 + sum(list(strzelone_dom.values())))/mecze_liga\n",
-    "avg_strzelone_wyjazd_liga = (276 + sum(list(strzelone_wyjazd.values())))/mecze_liga"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def initialize():\n",
-    "    global avg_strzelone_dom\n",
-    "    global avg_strzelone_wyjazd\n",
-    "    global avg_stracone_dom\n",
-    "    global avg_stracone_wyjazd\n",
-    "    \n",
-    "    avg_strzelone_dom = {}\n",
-    "    avg_strzelone_wyjazd= {}\n",
-    "    avg_stracone_dom = {}\n",
-    "    avg_stracone_wyjazd = {}\n",
-    "    \n",
-    "    g = open(\"Statystyki/poissonstats-ekstraklasa\", \"r\", encoding='utf-8')\n",
-    "    for x in g:\n",
-    "        team = x.strip().split(\",\")[0]\n",
-    "        avg_strzelone_dom[team] = int(x.strip().split(\",\")[1])/int(x.strip().split(\",\")[5])\n",
-    "        avg_stracone_dom[team] = int(x.strip().split(\",\")[2])/int(x.strip().split(\",\")[5])\n",
-    "        avg_strzelone_wyjazd[team]= int(x.strip().split(\",\")[3])/int(x.strip().split(\",\")[6])\n",
-    "        avg_stracone_wyjazd[team] = int(x.strip().split(\",\")[4])/int(x.strip().split(\",\")[6])\n",
-    "        \n",
-    "    global home_attack_strength\n",
-    "    home_attack_strength = {}\n",
-    "    global home_defence_strength\n",
-    "    home_defence_strength = {}\n",
-    "    global away_attack_strength\n",
-    "    away_attack_strength = {}\n",
-    "    global away_defence_strength\n",
-    "    away_defence_strength = {}\n",
+    "import os\n",
+    "def initialize(now):\n",
+    "    #structures for collecting data: goals shot and conceded, no. of matches played home and away, whole league shot and conceded\n",
+    "    team_shot_home = {}\n",
+    "    team_conceded_home = {}\n",
+    "    team_shot_away = {}\n",
+    "    team_conceded_away = {}\n",
+    "    home_teams = []\n",
+    "    away_teams = []\n",
+    "    league_stats = {'shot_home_avg': 0, 'shot_away_avg':0}\n",
     "\n",
-    "    for k in avg_strzelone_dom.keys():\n",
-    "        home_attack_strength[k] = avg_strzelone_dom[k]/avg_strzelone_dom_liga\n",
-    "        home_defence_strength[k] = avg_stracone_dom[k]/avg_strzelone_wyjazd_liga\n",
-    "        away_attack_strength[k] = avg_strzelone_wyjazd[k]/avg_strzelone_wyjazd_liga\n",
-    "        away_defence_strength[k] = avg_stracone_wyjazd[k]/avg_strzelone_dom_liga"
+    "    #appending data to strcutures for all matchdays till the chosen one\n",
+    "    matchdays_played = [int(m) for m in os.listdir(f\"{league.value}_matchdays\") if int(m)<int(now)]\n",
+    "    matches_no = 0\n",
+    "    for m in matchdays_played:\n",
+    "        h = open(f\"{league.value}_matchdays/{m}\", \"r\", encoding='utf-8')\n",
+    "        for match in h:\n",
+    "            matches_no+=1\n",
+    "            home, away, goal_home, goal_away = match.strip().split(\"-\")\n",
+    "            goal_home, goal_away = int(goal_home), int(goal_away)\n",
+    "            home_teams.append(home)\n",
+    "            away_teams.append(away)\n",
+    "\n",
+    "            league_stats['shot_home_avg']+=goal_home\n",
+    "            league_stats['shot_away_avg']+=goal_away\n",
+    "            \n",
+    "            if not home in team_shot_home:\n",
+    "                team_shot_home[home]=goal_home\n",
+    "                team_conceded_home[home]=goal_away\n",
+    "            else:\n",
+    "                team_shot_home[home]+=goal_home\n",
+    "                team_conceded_home[home]+=goal_away\n",
+    "            if not away in team_shot_away:\n",
+    "                team_shot_away[away]=goal_away\n",
+    "                team_conceded_away[away]=goal_home\n",
+    "            else:\n",
+    "                team_shot_away[away]+=goal_away\n",
+    "                team_conceded_away[away]+=goal_home\n",
+    "            \n",
+    "        h.close()\n",
+    "        \n",
+    "    league_stats[\"shot_home_avg\"]/=matches_no\n",
+    "    league_stats[\"shot_away_avg\"]/=matches_no\n",
+    "\n",
+    "    home_att_strength = {}\n",
+    "    home_def_strength = {}\n",
+    "    away_att_strength = {}\n",
+    "    away_def_strength = {}\n",
+    "\n",
+    "    #calucalting defence and attack strength for each team\n",
+    "    for k in team_shot_home.keys():\n",
+    "        k_home = home_teams.count(k)\n",
+    "        k_away = away_teams.count(k)\n",
+    "        home_att_strength[k] = (team_shot_home[k]/k_home)/league_stats['shot_home_avg']\n",
+    "        home_def_strength[k] = (team_conceded_home[k]/k_home)/league_stats['shot_away_avg']\n",
+    "        away_att_strength[k] = (team_shot_away[k]/k_away)/league_stats['shot_away_avg']\n",
+    "        away_def_strength[k] = (team_conceded_home[k]/k_away)/league_stats['shot_home_avg']\n",
+    "\n",
+    "    return league_stats, home_att_strength, home_def_strength, away_att_strength, away_def_strength"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,53 +246,45 @@
     "\n",
     "def display_matchday(a):\n",
     "    clear_output()\n",
-    "    h = open(f\"KolejkiEkstraklasa/{str(a)}\", \"r\", encoding='utf-8')\n",
-    "    for x in h:\n",
-    "        home_team = x.strip().split(\",\")[0].split(\"-\")[0]\n",
-    "        away_team = x.strip().split(\",\")[0].split(\"-\")[1]\n",
+    "    league_stats, home_att_strength, home_def_strength, away_att_strength, away_def_strength = initialize(a)\n",
+    "    current = open(f\"{league.value}_matchdays/{str(a)}\", \"r\", encoding='utf-8')\n",
+    "    for match in current:\n",
+    "        home_team = match.strip().split(\"-\")[0]\n",
+    "        away_team = match.strip().split(\"-\")[1]\n",
     "        rng = np.random.default_rng()\n",
     "        results = []\n",
-    "        home = home_attack_strength[home_team]*away_defence_strength[away_team]*avg_strzelone_dom_liga\n",
-    "        away = home_defence_strength[home_team]*away_attack_strength[away_team]*avg_strzelone_wyjazd_liga\n",
+    "        home = home_att_strength[home_team]*away_def_strength[away_team]*league_stats['shot_home_avg']\n",
+    "        away = home_def_strength[home_team]*away_att_strength[away_team]*league_stats['shot_away_avg']\n",
     "        print(home_team, \"vs\", away_team)\n",
     "        print(\"Siła:\", home, away)\n",
-    "        for i in range(0,int(n.value)):\n",
-    "            results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "        print(\"Prawdopodobieństwo czystego konta gospodarza:\", sum(x[1]==0 for x in results)/n.value)\n",
-    "        print(\"Prawdopodobieństwo czystego konta gościa:\", sum(x[0]==0 for x in results)/n.value)\n",
+    "        for i in range(0, int(n.value)):\n",
+    "            results.append((int(rng.poisson(home, 1)[0]),int(rng.poisson(away, 1)[0])))\n",
+    "        print(\"Prawdopodobieństwo czystego konta gospodarza:\", round(sum(x[1]==0 for x in results)/n.value, 4))\n",
+    "        print(\"Prawdopodobieństwo czystego konta gościa:\", round(sum(x[0]==0 for x in results)/n.value, 4))\n",
     "        \n",
-    "        print(\"Najbardziej prawdopodobne wyniki:\\n\",Counter(results).most_common(7),\"\\n\\n\\n\")\n",
-    "    h.close()"
+    "        print(\"Najbardziej prawdopodobne wyniki:\\n\", Counter(results).most_common(7),\"\\n\\n\\n\")\n",
+    "    current.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def on_confirm_button_clicked(b):\n",
-    "    initialize()\n",
     "    with output:\n",
-    "        display_matchday(kolejka.value)\n",
+    "        display_matchday(matchday.value)\n",
     "    \n",
     "button.on_click(on_confirm_button_clicked)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#home = home_attack_strength[\"Płock\"]*away_defence_strength[\"Zagłębie\"]*avg_strzelone_dom_liga\n",
-    "#away = home_defence_strength[\"Płock\"]*away_attack_strength[\"Zagłębie\"]*avg_strzelone_wyjazd_liga\n",
-    "#results = []\n",
-    "#rng = np.random.default_rng()\n",
-    "#for i in range(0,int(n.value)):\n",
-    "#    results.append((rng.poisson(home, 1)[0],rng.poisson(away, 1)[0]))\n",
-    "#Counter(results).most_common(35)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -300,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -314,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -779,5 +775,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
